ADD [ sideBar scss and html ]

--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -1,3 +1,10 @@
-<p>
-  side-bar works!
-</p>
+<div id="sidebar">
+  <h3>Items</h3>
+  <!--<a href="javascript:void(0)" class="closeBtn" onclick="closeNav()">&times;</a>-->
+  <a>Tasks</a>
+  <a>Calendar</a>
+  <a>News</a>
+  <h3>Etc</h3>
+  <a>Setting</a>
+  <a>Exit</a>
+</div>
