ADD [ service todo , rename all components ]

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<div id="container">
+  <sideBar></sideBar>
+  <div id="content">
+    <headerTodo></headerTodo>
+    <todoList></todoList>
+    <panelTodo></panelTodo>
+  </div>
+</div>
