--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div id="container">
-  <sideBar></sideBar>
+  <app-side-bar></app-side-bar>
   <div id="content">
-    <headerTodo></headerTodo>
-    <todoList></todoList>
-    <panelTodo></panelTodo>
+    <app-header-todo></app-header-todo>
+    <app-todo-list></app-todo-list>
+    <app-panel-todo></app-panel-todo>
   </div>
 </div>
