ADD [ font awesome ]

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div id="container">
   <app-side-bar></app-side-bar>
-  <div id="content">
+  <div id="header">
     <app-header-todo></app-header-todo>
+  </div>
+  <div id="content">
     <app-todo-list></app-todo-list>
-    <app-panel-todo></app-panel-todo>
+    <!--<app-panel-todo></app-panel-todo>-->
   </div>
 </div>
