--- a/src/app/components/todoList/headerTodo/headerTodo.component.html
+++ b/src/app/components/todoList/headerTodo/headerTodo.component.html
@@ -1,1 +1,19 @@
-<div id="headerTodo"></div>
+<div id="headerTodo">
+  <div class="main">
+    <span class="thermometer value">18.19 C</span>
+    <i class="fa fa-thermometer-0 fa-2x"></i>
+    <span class="thermometerCaption caption">Temperature</span>
+    <div class="vertical-line"></div>
+  </div>
+  <div class="main">
+    <span class="volutes value">$65.31 / €77.55</span>
+    <span class="volutesCaption caption">Course</span>
+    <div class="vertical-line"></div>
+  </div>
+  <div class="main">
+    <span class="clock value">21:31:42</span>
+    <i class="fa fa-clock-o fa-2x"></i>
+    <span class="clockCaption caption">Time</span>
+    <div class="vertical-line"></div>
+  </div>
+</div>
