--- a/src/app/components/todoList/todoList.component.html
+++ b/src/app/components/todoList/todoList.component.html
@@ -1,3 +1,37 @@
-<p>
-  todo-list works!
-</p>
+<ul class="toDoList">
+  <li id="addToDo">
+    <div>
+      <button class="todo"><i class="fa fa-plus fa-1x" aria-hidden="true"> </i>ADD TODO</button>
+      <input placeholder="Text todo"></div>
+  </li>
+  <li>
+    <div id="body1">
+      <input id="checkbox-3" class="checkbox-custom" name="checkbox-3" type="checkbox">
+      <label for="checkbox-3" class="checkbox-custom-label"></label>
+      <span>KILL MENAGER</span>
+      <i class="fa fa-chevron-down fa-2x openTodo" onclick="openTodo('todo1', this.classList)"></i>
+      <div class="statusEveryday">Everyday</div>
+      <div class="statusDayLeft">10 days left</div>
+      <div class="statusImportant">1 day left</div>
+      <div id="todo1" class="bodyTodo">
+        <ul class="toDoList">
+          <li>
+            <div class="underTodo">
+              <input id="innerCB-1" class="checkbox-custom" name="checkbox-3" type="checkbox">
+              <label for="innerCB-1" class="checkbox-custom-label"></label>
+              <span>BEAR</span></div>
+          </li>
+          <li>fsfsd</li>
+          <li>fsfsd</li>
+          <li>fsfsd</li>
+          <li>fsfsd</li>
+          <li>fsfsd</li>
+          <li>fsfsd</li>
+          <li>fsfsd</li>
+          <li>fsfsd</li>
+          <li>fsfsd</li>
+        </ul>
+      </div>
+    </div>
+  </li>
+</ul>
