ADD [ status for sideBar ]

--- a/src/app/components/sideBar/sideBar.component.html
+++ b/src/app/components/sideBar/sideBar.component.html
@@ -1,7 +1,19 @@
 <div id="sidebar">
   <h3>Items</h3>
-  <!--<a href="javascript:void(0)" class="closeBtn" onclick="closeNav()">&times;</a>-->
-  <a>Tasks</a>
+  <a><span>Tasks</span>
+    <div class="flip-container">
+      <div class="flipper">
+        <div class="front sidebarStatus">
+          3
+        </div>
+      </div>
+      <div class="flipper">
+        <div class="back sidebarStatus">
+          4
+        </div>
+      </div>
+    </div>
+  </a>
   <a>Calendar</a>
   <a>News</a>
   <h3>Etc</h3>
