ADD [ openTodo method ]

--- a/src/app/components/todoList/todoList.component.html
+++ b/src/app/components/todoList/todoList.component.html
@@ -5,11 +5,11 @@
       <input placeholder="Text todo"></div>
   </li>
   <li>
-    <div id="body1">
+    <div id="todo2" class="todo">
       <input id="checkbox-3" class="checkbox-custom" name="checkbox-3" type="checkbox">
       <label for="checkbox-3" class="checkbox-custom-label"></label>
       <span>KILL MENAGER</span>
-      <i class="fa fa-chevron-down fa-2x openTodo" onclick="openTodo('todo1', this.classList)"></i>
+      <i class="fa fa-chevron-down fa-2x openTodo" onclick="openTodo('todo2', this.classList)"></i>
       <div class="statusEveryday">Everyday</div>
       <div class="statusDayLeft">10 days left</div>
       <div class="statusImportant">1 day left</div>
