--- a/src/app/components/todoList/todoList.component.scss
+++ b/src/app/components/todoList/todoList.component.scss
@@ -52,6 +52,7 @@
 
 .toDoList {
   height: 100%;
+  padding-left: 20px;
 }
 
 .toDoList li {
@@ -81,6 +82,7 @@
 .bodyTodo {
   width: 100%;
   display: none;
+  height: 70px;
 }
 
 .statusEveryday {
