--- a/src/app/components/todoList/todoList.component.scss
+++ b/src/app/components/todoList/todoList.component.scss
@@ -3,11 +3,17 @@
   background-color: #6f7d95;
   color: #ffffff;
   border-radius: 5px;
+  margin-top: 10px;
+  margin-right: 30px;
+  padding: 10px 10px 10px 10px;
+  list-style-type: none;
+  font-weight: 600;
+  margin-left: 20px;
 }
 
 
 
-#addToDo div button {
+#addToDo button {
   background: #7c8aa6;
   border-radius: 5px;
   color: #ffffff;
@@ -20,13 +26,12 @@
   box-shadow: 1px 1px 2px #000000;
 }
 
-#addToDo div button:hover {
+#addToDo button:hover {
   background: #3cb0fd;
 }
 
 #addToDo i {
   font-size: 20px;
-  padding-right: 10px;
 }
 
 #addToDo i:hover {
@@ -64,6 +69,9 @@
   background-color: #ffffff;
   color: #7989a0;
   font-weight: 600;
+}
+.todo {
+  height: 30px;
 }
 
 .underTodo {
@@ -129,5 +137,43 @@
 
 .statusImportant:hover {
   box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.31);
+}
+
+.checkbox-custom, .radio-custom {
+  opacity: 0;
+  position: absolute;
+}
+
+.checkbox-custom, .checkbox-custom-label, .radio-custom, .radio-custom-label {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 5px;
+  cursor: pointer;
+}
+
+.checkbox-custom-label, .radio-custom-label {
+  position: relative;
+}
+
+.checkbox-custom + .checkbox-custom-label:before, .radio-custom + .radio-custom-label:before {
+  content: '';
+  background: #fff;
+  border-radius: 15px;
+  border: 2px solid #ddd;
+  display: inline-block;
+  vertical-align: middle;
+  width: 15px;
+  height: 15px;
+  padding: 2px;
+  margin-right: 10px;
+  text-align: center;
+}
+
+.checkbox-custom:checked + .checkbox-custom-label:before {
+  content: "\f00c";
+  font-family: 'FontAwesome';
+  background: #656f99;
+  color: #fff;
+  font-size: 15px;
 }
 
