[ ADD ] small fix

--- a/src/app/components/todoList/todoList.component.html
+++ b/src/app/components/todoList/todoList.component.html
@@ -2,9 +2,11 @@
   <button><i class="fa fa-plus fa-1x" aria-hidden="true" (click)="addTodo()" ></i></button>
   <input placeholder="Text todo">
 </div>
+<ul *ngFor="let item of todoList">
+  <li>{{item.id}}</li>
+</ul>
 <ul class="toDoList">
-
-  <li *ngFor="let item of todoList">
+  <li>
     <div class="todo">
       <input id="checkbox-3" class="checkbox-custom" name="checkbox-3" type="checkbox">
       <label for="checkbox-3" class="checkbox-custom-label"></label>
