--- a/src/app/components/todoList/todoList.component.html
+++ b/src/app/components/todoList/todoList.component.html
@@ -2,8 +2,17 @@
   <button><i class="fa fa-plus fa-1x" aria-hidden="true" (click)="addTodo()" ></i></button>
   <input placeholder="Text todo">
 </div>
-<ul *ngFor="let item of todoList">
-  <li>{{item.id}}</li>
+<ul class="toDoList">
+  <li *ngFor="let todo of todoList | async">
+    <div class="todo">
+      <input  class="checkbox-custom" name="checkbox-3" type="checkbox">
+      <label  class="checkbox-custom-label"></label>
+      <span>{{todo.title}}</span>
+      <div class="statusEveryday">Everyday</div>
+      <div class="statusDayLeft">10 days left</div>
+      <div class="statusImportant">1 day left</div>
+    </div>
+  </li>
 </ul>
 <ul class="toDoList">
   <li>
