--- a/src/app/components/todoList/todoList.component.html
+++ b/src/app/components/todoList/todoList.component.html
@@ -3,22 +3,21 @@
   <input placeholder="Text todo">
 </div>
 <ul class="toDoList">
-  <li *ngFor="let todo of todoList | async">
-    <div class="todo">
-      <input  class="checkbox-custom" name="checkbox-3" type="checkbox">
-      <label  class="checkbox-custom-label"></label>
-      <span>{{todo.title}}</span>
-      <div class="statusEveryday">Everyday</div>
-      <div class="statusDayLeft">10 days left</div>
-      <div class="statusImportant">1 day left</div>
+  <li *ngFor="let todo of todoList">
+    <div class="todo" id="todo-{{todo.id}}">
+      <input [checked]="todo.complete" id="checkbox-{{todo.id}}" (click)="completeTodo(todo);" class="checkbox-custom" type="checkbox">
+      <label  for="checkbox-{{todo.id}}" class="checkbox-custom-label"></label>
+      <span [ngClass]="{'todo-complete': todo.complete}">{{todo.caption}}</span>
+      <button  (click)="removeTodo(todo)" class="btn-remove fa fa-remove "></button>
+      <div *ngIf="todo.type == 1" class="statusEveryday">Everyday</div>
+      <div *ngIf="todo.type == 2" class={{getClassForLabel(todo.date)}}>{{getTime(todo.date)}}</div>
+      <!--<div class="statusImportant">1 day left</div>-->
     </div>
   </li>
-</ul>
-<ul class="toDoList">
   <li>
     <div class="todo">
-      <input id="checkbox-3" class="checkbox-custom" name="checkbox-3" type="checkbox">
-      <label for="checkbox-3" class="checkbox-custom-label"></label>
+      <input id="checkbox-a" class="checkbox-custom" name="checkbox-3" type="checkbox">
+      <label for="checkbox-a" class="checkbox-custom-label"></label>
       <span>Kill menegers and testirovtik</span>
       <div class="statusEveryday">Everyday</div>
       <div class="statusDayLeft">10 days left</div>
