[ ADD ] modal todo

--- a/src/app/components/todoList/todoList.component.html
+++ b/src/app/components/todoList/todoList.component.html
@@ -1,6 +1,5 @@
-<div id="addToDo">
-  <button><i class="fa fa-plus fa-1x" aria-hidden="true" (click)="addTodo()" ></i></button>
-  <input placeholder="Text todo">
+<div id="panelTodo">
+  <panel-todo></panel-todo>
 </div>
 <ul class="toDoList">
   <li *ngFor="let todo of todoList">
