--- a/src/app/components/todoList/panelTodo/panelTodo.component.scss
+++ b/src/app/components/todoList/panelTodo/panelTodo.component.scss
@@ -1,7 +1,37 @@
 #panelTodo {
   background-color: #6f7d95;
-  position: fixed;
-  left: 90%;
-  height: 100%;
-  width: 200px;
+  color: #ffffff;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-right: 30px;
+  padding: 10px 10px 10px 10px;
+  list-style-type: none;
+  font-weight: 600;
+  margin-left: 20px;
+}
+
+
+#panelTodo i {
+  font-size: 20px;
+}
+
+#panelTodo i:hover {
+  color: #70ff8e;
+}
+
+#panelTodo input {
+  border: 1px solid #ffffff;
+  background: #ffffff;
+  margin-left: 10px;
+  border-radius: 5px;
+  padding-left: 8px;
+  font-size: 20px;
+  font-weight: 600;
+  height: 38px;
+  color: #7989a0;
+
+}
+
+#panelTodo input:hover {
+
 }
