--- a/src/app/components/todoList/todoList.component.scss
+++ b/src/app/components/todoList/todoList.component.scss
@@ -1,59 +1,4 @@
 
-#addToDo {
-  background-color: #6f7d95;
-  color: #ffffff;
-  border-radius: 5px;
-  margin-top: 10px;
-  margin-right: 30px;
-  padding: 10px 10px 10px 10px;
-  list-style-type: none;
-  font-weight: 600;
-  margin-left: 20px;
-}
-
-
-
-#addToDo button {
-  background: #7c8aa6;
-  border-radius: 5px;
-  color: #ffffff;
-  font-size: 19px;
-  padding: 12px 20px 10px 20px;
-  text-decoration: none;
-  border: none;
-  font-weight: 600;
-  cursor: pointer;
-  box-shadow: 1px 1px 2px #000000;
-}
-
-#addToDo button:hover {
-  background: #3cb0fd;
-}
-
-#addToDo i {
-  font-size: 20px;
-}
-
-#addToDo i:hover {
-  color: #70ff8e;
-}
-
-#addToDo input {
-  border: 1px solid #ffffff;
-  background: #ffffff;
-  margin-left: 10px;
-  border-radius: 5px;
-  padding-left: 8px;
-  font-size: 20px;
-  font-weight: 600;
-  height: 38px;
-  color: #7989a0;
-
-}
-
-#addToDo input:hover {
-
-}
 
 .toDoList {
   height: 100%;
@@ -93,51 +38,7 @@
   height: 70px;
 }
 
-.statusEveryday {
-  float: right;
-  border-radius: 15px;
-  background-color: #1ce684;
-  padding: 5px 10px 5px 10px;
-  margin-right: 15px;
-  cursor: pointer;
-  color: beige;
-  box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.16);
-}
 
-.statusEveryday:hover {
-  box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.31);
-}
-
-.statusDayLeft {
-  float: right;
-  border-radius: 15px;
-  background-color: #15a4fa;
-  padding: 5px 10px 5px 10px;
-  margin-right: 15px;
-  cursor: pointer;
-  color: beige;
-  box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.16);
-}
-
-.statusDayLeft:hover {
-  box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.31);
-}
-
-
-.statusImportant{
-  float: right;
-  border-radius: 15px;
-  background-color: #f1495b;
-  padding: 5px 10px 5px 10px;
-  margin-right: 15px;
-  cursor: pointer;
-  color: beige;
-  box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.16);
-}
-
-.statusImportant:hover {
-  box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.31);
-}
 
 .checkbox-custom, .radio-custom {
   opacity: 0;
@@ -191,6 +92,7 @@
   margin: 0;
   cursor:pointer;
   opacity: 0.3;
+  transition: 0.3s;
 }
 .btn-remove:hover{
   background: #78909C;
