--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,50 @@ html,body {
   width: 100%;
   height: 100%;
 }
+
+.statusEveryday {
+  float: right;
+  border-radius: 15px;
+  background-color: #1ce684;
+  padding: 5px 10px 5px 10px;
+  margin-right: 15px;
+  cursor: pointer;
+  color: beige;
+  box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.16);
+}
+
+.statusEveryday:hover {
+  box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.31);
+}
+
+.statusDayLeft {
+  float: right;
+  border-radius: 15px;
+  background-color: #15a4fa;
+  padding: 5px 10px 5px 10px;
+  margin-right: 15px;
+  cursor: pointer;
+  color: beige;
+  box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.16);
+}
+
+.statusDayLeft:hover {
+  box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.31);
+}
+
+
+.statusImportant{
+  float: right;
+  border-radius: 15px;
+  background-color: #f1495b;
+  padding: 5px 10px 5px 10px;
+  margin-right: 15px;
+  cursor: pointer;
+  color: beige;
+  box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.16);
+
+}
+
+.statusImportant:hover {
+  box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.31);
+}
