--- a/src/app/components/todoList/todoList.component.html
+++ b/src/app/components/todoList/todoList.component.html
@@ -1,5 +1,5 @@
 <div id="panelTodo">
-  <panel-todo></panel-todo>
+  <panel-todo [todoList]="todoList"></panel-todo>
 </div>
 <ul class="toDoList">
   <li *ngFor="let todo of todoList">
