[ EDIT ] position header and sideBar

--- a/src/app/components/sideBar/sideBar.component.scss
+++ b/src/app/components/sideBar/sideBar.component.scss
@@ -2,6 +2,7 @@
   height: 100%;
   float: left;
   width: 200px;
+  top: 50px;
   position: fixed;
   background-color: #354052;
   padding-top: 10px;
