--- a/src/app/components/todoList/headerTodo/headerTodo.component.scss
+++ b/src/app/components/todoList/headerTodo/headerTodo.component.scss
@@ -1,22 +1,35 @@
-
-@mixin left($left){
+@mixin left($left) {
   left: $left + 200px;
 }
 
 #headerTodo {
   width: 100%;
   height: 50px;
-  background-color: #9fbdd7;
-
+  background-color: #354052;
+  position: fixed;
+  top: 0;
+  left: 0;
   .main {
     width: 170px;
     height: 90px;
-    background-color: #ebf1f5;
     float: left;
     font-size: 20px;
     color: #5b6a7d;
     font-weight: 600;
   }
+
+  .logo {
+    font-size: 30px;
+    font-weight: 400;
+    color: #63aac7;
+    display: block;
+    margin-top: 5px;
+    margin-left: 25px;
+    cursor: pointer;
+    border-bottom: 1px solid;
+    width: 50px;
+  }
+
 
   .value {
     margin-top: 30px;
