--- a/src/app/components/todoList/headerTodo/headerTodo.component.html
+++ b/src/app/components/todoList/headerTodo/headerTodo.component.html
@@ -1,5 +1,6 @@
-<div id="headerTodo">
+<div id="headerTodo" >
   <span class="logo">dBd</span>
+  <!--<div class="clock"> {{time}} </div>-->
   <!--<div class="main">-->
     <!--<span class="thermometer value">18.19 C</span>-->
     <!--<i class="fa fa-thermometer-0 fa-2x"></i>-->
@@ -12,8 +13,8 @@
     <!--<div class="vertical-line"></div>-->
   <!--</div>-->
   <!--<div class="main">-->
-    <!--<span class="clock value">21:31:42</span>-->
-    <!--<i class="fa fa-clock-o fa-2x"></i>-->
+    <!--<span claturnClocklock value">21:31:42</span>-->
+    <!--<i class="faturnClocklock-o fa-2x"></i>-->
     <!--<span class="clockCaption caption">Time</span>-->
     <!--<div class="vertical-line"></div>-->
   <!--</div>-->
