--- a/src/app/components/todoList/todoList.component.scss
+++ b/src/app/components/todoList/todoList.component.scss
@@ -1,20 +1,47 @@
 
 
+
 .toDoList {
   height: 100%;
   padding-left: 20px;
+
+  input {
+    color: #7989a0;
+    font-weight: 600;
+    border: none;
+    font-size: 18px;
+    padding: 3px;
+    cursor: pointer;
+    background: white;
+
+    &.todo-complete {
+      text-decoration: line-through;
+    }
+
+    &.edit {
+      box-sizing: border-box;
+      padding: 3px 3px 3px 5px;
+    }
+
+
+  }
+
+  li{
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-right: 30px;
+    padding: 10px 10px 10px 10px;
+    list-style-type: none;
+    background-color: #ffffff;
+
+    cursor: pointer;
+  }
+
+  .selected {
+    background: #a6d4da;
+  }
 }
 
-.toDoList li {
-  border-radius: 5px;
-  margin-top: 10px;
-  margin-right: 30px;
-  padding: 10px 10px 10px 10px;
-  list-style-type: none;
-  background-color: #ffffff;
-  color: #7989a0;
-  font-weight: 600;
-}
 .todo {
   height: 30px;
 }
@@ -37,8 +64,6 @@
   display: none;
   height: 70px;
 }
-
-
 
 .checkbox-custom, .radio-custom {
   opacity: 0;
@@ -78,9 +103,7 @@
   font-size: 15px;
 }
 
-.todo-complete {
-  text-decoration: line-through;
-}
+
 
 .btn-remove {
   float: right;
@@ -90,11 +113,12 @@
   box-shadow: 0px 1px 4px 0px;
   background: #607D8B;
   margin: 0;
-  cursor:pointer;
+  cursor: pointer;
   opacity: 0.3;
   transition: 0.3s;
 }
-.btn-remove:hover{
+
+.btn-remove:hover {
   background: #78909C;
   opacity: 1;
 }
