--- a/src/app/components/todoList/todoList.component.scss
+++ b/src/app/components/todoList/todoList.component.scss
@@ -30,7 +30,6 @@
     border-radius: 5px;
     margin-top: 10px;
     margin-right: 30px;
-    padding: 10px 10px 10px 10px;
     list-style-type: none;
     background-color: #ffffff;
 
@@ -39,11 +38,14 @@
 
   .selected {
     background: #a6d4da;
+    outline:none;
   }
 }
 
 .todo {
   height: 30px;
+  padding: 10px 10px 10px 10px;
+  margin-left: 52px;
 }
 
 .underTodo {
@@ -65,42 +67,48 @@
   height: 70px;
 }
 
-.checkbox-custom, .radio-custom {
-  opacity: 0;
-  position: absolute;
-}
+.checkbox-root {
+  float: left;
+  border: 1px solid #aab9ec;
+  height: 48px;
+  width: 50px;
+  border-radius: 3px;
 
-.checkbox-custom, .checkbox-custom-label, .radio-custom, .radio-custom-label {
-  display: inline-block;
-  vertical-align: middle;
-  margin: 5px;
-  cursor: pointer;
-}
+  input[type="checkbox"]{
+    display: none;
+  }
 
-.checkbox-custom-label, .radio-custom-label {
-  position: relative;
-}
+  label {
+    position: relative;
+    font-size: 30px;
+    top: 5px;
+    left:11px;
+    cursor: pointer;
+  }
 
-.checkbox-custom + .checkbox-custom-label:before, .radio-custom + .radio-custom-label:before {
-  content: '';
-  background: #fff;
-  border-radius: 15px;
-  border: 2px solid #ddd;
-  display: inline-block;
-  vertical-align: middle;
-  width: 15px;
-  height: 15px;
-  padding: 2px;
-  margin-right: 10px;
-  text-align: center;
-}
-
-.checkbox-custom:checked + .checkbox-custom-label:before {
-  content: "\f00c";
-  font-family: 'FontAwesome';
-  background: #656f99;
-  color: #fff;
-  font-size: 15px;
+  span.checkbox::before {
+    width: 27px;
+    height: 27px;
+    background-color: #fff;
+    left: -35px;
+    box-sizing: border-box;
+    border: 3px solid transparent;
+    transition: border-color .2s;
+  }
+  span.checkbox:hover::before {
+    border: 3px solid #F0FF76;
+  }
+  span.checkbox::after {
+    content: '\f00c';
+    font-family: 'FontAwesome';
+    left: -31px;
+    top: 2px;
+    color: transparent;
+    transition: color .2s;
+  }
+  input[type="checkbox"]:checked + label span.checkbox::after {
+    color: #62AFFF;
+  }
 }
 
 
