--- a/src/app/components/todoList/todoList.component.html
+++ b/src/app/components/todoList/todoList.component.html
@@ -5,8 +5,8 @@
   <li *ngFor="let todo of todoList"
       >
     <div class="checkbox-root">
-    <input [checked]="todo.complete" id="checkbox-{{todo.id}}" (click)="updateTodo(todo)" class="checkbox-custom"
-          [(ngModel)]="todo.complete" type="checkbox">
+    <input [checked]="todo.complete" id="checkbox-{{todo.id}}"  class="checkbox-custom"
+          [(ngModel)]="todo.complete" type="checkbox" (click)="completeTodo(todo)">
     <label for="checkbox-{{todo.id}}" ><span class="checkbox"></span> </label>
     </div>
     <div class="todo" tabindex="1" id="todo-{{todo.id}}" [class.selected]="todo.select" (focus)="selectTodo(todo)" (blur)="blurTodo(todo)">
