[ ADD ] move classes , add root todo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
 <div id="container">
-  <app-side-bar></app-side-bar>
+  <side-bar></side-bar>
   <div id="header">
-    <app-header-todo></app-header-todo>
+    <header-todo></header-todo>
   </div>
   <div id="content">
-    <app-todo-list></app-todo-list>
-    <!--<app-panel-todo></app-panel-todo>-->
+    <root-todo></root-todo>
   </div>
 </div>
