--- a/src/app/components/todo/panelTodo/panelTodo.component.scss
+++ b/src/app/components/todo/panelTodo/panelTodo.component.scss
@@ -2,13 +2,12 @@
   background-color: #6f7d95;
   color: #ffffff;
   border-radius: 5px;
-  margin-top: 50px;
   margin-right: 30px;
   padding: 10px 10px 10px 10px;
   list-style-type: none;
   font-weight: 600;
   margin-left: 20px;
-
+  width: 100%;
 }
 
 
