--- a/src/app/components/ui/combobox/combobox.component.css
+++ b/src/app/components/ui/combobox/combobox.component.css
@@ -4,51 +4,43 @@
   padding: 10px;
   font-size: 12px;
   border: none;
-  cursor:pointer;
+  cursor: pointer;
   width: 25px;
   float: left;
-  height: 30px;
-}
+  height: 30px; }
 
 .selected {
- float: left;
-  height:25px;
-}
+  float: left;
+  height: 25px; }
 
 .dropdown:hover, .btn-drop:hover {
-  background: #3e8e41;;
-}
-
+  background: #3e8e41; }
 
 .dropdown {
   position: relative;
-  display:inline-block;
-}
+  display: inline-block; }
 
 .content {
   display: none;
-  position:absolute;
+  position: absolute;
   background-color: #f9f9f9;
   width: 180px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   height: 130px;
-  top:30px;
-  overflow: auto;
-  span {
+  top: 30px;
+  overflow: auto; }
+  .content span {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     font-size: 14px;
-    cursor: pointer;
-    &:hover {
-      background-color: #f1f1f1
-    }
-  }
-}
+    cursor: pointer; }
+    .content span:hover {
+      background-color: #f1f1f1; }
+
 .show {
-  display: block;
-}
+  display: block; }
 
-
+/*# sourceMappingURL=combobox.component.css.map */
