--- a/src/app/components/ui/combobox/combobox.component.html
+++ b/src/app/components/ui/combobox/combobox.component.html
@@ -6,5 +6,8 @@
     <span>value 1</span>
     <span>value 2</span>
     <span>value 3</span>
+    <span>value 3</span>
+    <span>value 3</span>
+    <span>value 3</span>
   </div>
 </div>
