--- a/src/app/components/todo/addTodo/addTodo.component.scss
+++ b/src/app/components/todo/addTodo/addTodo.component.scss
@@ -8,6 +8,9 @@
   font-weight: 600;
   cursor: pointer;
   box-shadow: 1px 1px 2px #000000;
+  height: 35px;
+  width: 45px;
+  transition: 0.3s;
 }
 
 #btnOpenModal:hover {
