[ EDIT ] panel todo , todoList

--- a/src/app/components/todo/panelTodo/panelTodo.component.css
+++ b/src/app/components/todo/panelTodo/panelTodo.component.css
@@ -6,8 +6,7 @@
   padding: 10px 10px 10px 10px;
   list-style-type: none;
   font-weight: 600;
-  margin-left: 20px;
-  width: 100%; }
+  margin-left: 20px; }
 
 #panelTodo i {
   font-size: 20px; }
