--- a/src/app/components/todo/todoList/todoList.component.css
+++ b/src/app/components/todo/todoList/todoList.component.css
@@ -1,7 +1,6 @@
 .toDoList {
   height: 100%;
-  padding-left: 20px;
-  margin-top: 100px; }
+  padding-left: 20px; }
   .toDoList input {
     color: #7989a0;
     font-weight: 600;
