[ EDIT ] root todo layout , app component , root css

--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,4 +1,6 @@
 <div class="root-todo">
   <panel-todo></panel-todo>
-  <todo-list></todo-list>
+  <div class="todo-content">
+    <todo-list></todo-list>
+  </div>
 </div>
