--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,8 @@ html,body {
   font-family: 'Open Sans', sans-serif;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  background-color: #ebf1f5;
+  overflow: auto;
 }
 
 .statusEveryday {
