--- a/src/app/components/ui/combobox/combobox.component.css
+++ b/src/app/components/ui/combobox/combobox.component.css
@@ -1,20 +1,27 @@
 .btn-drop {
-  background-color: #4CAF50;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  width: 35px;
+  background-color: #6dcde6;
   color: white;
-  padding: 10px;
   font-size: 12px;
   border: none;
   cursor: pointer;
-  width: 25px;
   float: left;
-  height: 30px; }
+  height: 35px; }
+
+.dropdown:hover, .btn-drop:hover {
+  background: #34b4de;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px; }
 
 .selected {
   float: left;
-  height: 25px; }
-
-.dropdown:hover, .btn-drop:hover {
-  background: #3e8e41; }
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+  padding: 0;
+  border: 0;
+  height: 35px; }
 
 .dropdown {
   position: relative;
@@ -24,11 +31,11 @@
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  width: 180px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   height: 130px;
-  top: 30px;
+  width: 187px;
+  top: 32px;
   overflow: auto; }
   .content span {
     color: black;
