--- a/src/app/components/ui/combobox/combobox.component.scss
+++ b/src/app/components/ui/combobox/combobox.component.scss
@@ -1,39 +1,46 @@
 .btn-drop {
-  background-color: #4CAF50;
+
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  width: 35px;
+
+  background-color: #6dcde6;
   color: white;
-  padding: 10px;
   font-size: 12px;
   border: none;
-  cursor:pointer;
-  width: 25px;
+  cursor: pointer;
   float: left;
-  height: 30px;
-}
-
-.selected {
- float: left;
-  height:25px;
+  height: 35px;
 }
 
 .dropdown:hover, .btn-drop:hover {
-  background: #3e8e41;;
+  background: #34b4de;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
 }
-
+.selected {
+  float: left;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+  padding: 0;
+  border: 0;
+  height: 35px;
+}
 
 .dropdown {
   position: relative;
-  display:inline-block;
+  display: inline-block;
 }
 
 .content {
   display: none;
-  position:absolute;
+  position: absolute;
   background-color: #f9f9f9;
-  width: 180px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   height: 130px;
-  top:30px;
+  width: 187px;
+  top: 32px;
   overflow: auto;
   span {
     color: black;
@@ -47,6 +54,7 @@
     }
   }
 }
+
 .show {
   display: block;
 }
