--- a/src/app/components/todo/addTodo/addTodo.component.scss
+++ b/src/app/components/todo/addTodo/addTodo.component.scss
@@ -11,6 +11,9 @@
   height: 35px;
   width: 45px;
   transition: 0.3s;
+  display: block;
+  float: left;
+  margin-right: 10px;
 }
 
 #btnOpenModal:hover {
