--- a/src/app/components/todo/panelTodo/panelTodo.component.html
+++ b/src/app/components/todo/panelTodo/panelTodo.component.html
@@ -1,4 +1,4 @@
 <div id="panelTodo">
   <add-todo [todoList]="todoList"></add-todo>
-  <combobox></combobox>
+  <combobox [items]=""></combobox>
 </div>
