--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,6 +1,6 @@
 <div class="root-todo">
-  <panel-todo></panel-todo>
+  <panel-todo [todoList]="todoList"></panel-todo>
   <div class="todo-content">
-    <todo-list></todo-list>
+    <todo-list [todoList]="todoList"></todo-list>
   </div>
 </div>
