--- a/src/app/components/todo/addTodo/addTodo.component.css
+++ b/src/app/components/todo/addTodo/addTodo.component.css
@@ -18,18 +18,32 @@
 #btnOpenModal:hover {
   background: #3cb0fd; }
 
+.nameTodo {
+  float: left;
+  margin-right: 10px;
+  margin-top: 4px; }
+
 .input {
+  float: left;
   height: 25px;
   padding: 3px;
   font-size: 15px;
   font-weight: 600;
-  color: #3c5c6d; }
+  color: #3c5c6d;
+  width: 58%; }
+
+.typeTodo {
+  float: left;
+  margin-right: 20px;
+  margin-top: 4px; }
 
 .combo-box {
+  float: left;
   height: 35px;
   background: #95bdf7;
   border: none;
-  font-size: 14px; }
+  font-size: 14px;
+  width: 60%; }
 
 .btn-add-todo {
   height: 35px;
@@ -63,8 +77,13 @@
   margin: 10% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 40%;
-  background: rgba(96, 125, 139, 0.7); }
+  width: 26%;
+  background: rgba(96, 125, 139, 0.7);
+  height: 150px; }
+  .modal-content div {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 5px; }
 
 .close {
   color: #aaa;
