--- a/src/app/components/todo/addTodo/addTodo.component.html
+++ b/src/app/components/todo/addTodo/addTodo.component.html
@@ -2,12 +2,18 @@
 <div id="modalAddTodo" class="modal">
   <div class="modal-content">
     <span (click)="setVisibleModal(false)" class="close fa fa-window-close"></span>
+    <div>
+    <span class="nameTodo">Name todo</span>
     <input [(ngModel)]= "caption" class="input" type="text" placeholder="Input todo">
+    </div>
+    <div>
+    <span class="typeTodo">Type todo</span>
     <select class="combo-box" [(ngModel)]="type">
       <option [ngValue]="1">Every day</option>
       <option [ngValue]="2">Note</option>
       <option [ngValue]="3">By date</option>
     </select>
+    </div>
     <button (click)="addTodo()" class="btn-add-todo fa-plus"><span>Create</span></button>
   </div>
 </div>
