--- a/src/app/components/todo/panelTodo/panelTodo.component.css
+++ b/src/app/components/todo/panelTodo/panelTodo.component.css
@@ -3,10 +3,11 @@
   color: #ffffff;
   border-radius: 5px;
   margin-right: 30px;
-  padding: 15px 10px 10px 10px;
+  padding: 10px 10px 10px 10px;
   list-style-type: none;
   font-weight: 600;
-  margin-left: 20px; }
+  margin-left: 20px;
+  height: 35px; }
 
 #panelTodo i {
   font-size: 20px; }
