[ ADD ]  routing module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,7 @@
   <header-todo></header-todo>
 </div>
 <div id="content">
-  <root-todo></root-todo>
+  <router-outlet></router-outlet>
+  <!--<root-todo></root-todo>-->
+  <!--<calendar-layout></calendar-layout>-->
 </div>
