[ ADD ]  routing to /todo and /calendar

--- a/src/app/components/sideBar/sideBar.component.html
+++ b/src/app/components/sideBar/sideBar.component.html
@@ -1,6 +1,6 @@
 <div id="sidebar">
   <h3>Items</h3>
-  <a><span>Tasks</span>
+  <a routerLink="/todo"> <span>Tasks</span>
     <div class="flip-container">
       <div class="flipper">
         <div class="front sidebarStatus">
@@ -14,7 +14,7 @@
       </div>
     </div>
   </a>
-  <a>Calendar</a>
+  <a routerLink="/calendar">Calendar</a>
   <a>News</a>
   <h3>Etc</h3>
   <a>Setting</a>
