[ ADD ]  foundation calendar

--- a/src/app/components/calendar/calendar-layout.html
+++ b/src/app/components/calendar/calendar-layout.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="root">
+  <calendar [name]="wwwwwwww"></calendar>
+  <calendar></calendar>
+  <calendar></calendar>
+  <calendar></calendar>
+  <calendar></calendar>
+  <calendar></calendar>
+  <calendar></calendar>
+  <calendar></calendar>
+  <calendar></calendar>
+  <calendar></calendar>
+  <calendar></calendar>
+  <calendar></calendar>
+</div>
 
-</body>
-</html>
