[ ADD ]  calendar not working

--- a/src/app/components/calendar/calendar-layout.html
+++ b/src/app/components/calendar/calendar-layout.html
@@ -1,15 +1,4 @@
 <div class="root">
-  <calendar [name]="wwwwwwww"></calendar>
-  <calendar></calendar>
-  <calendar></calendar>
-  <calendar></calendar>
-  <calendar></calendar>
-  <calendar></calendar>
-  <calendar></calendar>
-  <calendar></calendar>
-  <calendar></calendar>
-  <calendar></calendar>
-  <calendar></calendar>
-  <calendar></calendar>
+  <calendar *ngFor="let month of months" [month]="month"></calendar>
 </div>
 
