--- a/src/app/components/calendar/calendar.html
+++ b/src/app/components/calendar/calendar.html
@@ -3,13 +3,13 @@
   <table class="cal-table" cellspacing="0">
     <tr>
       <td class="left button">
-        <button (click)="changeYearOrMonth(3)"><<</button>
-        <button (click)="changeYearOrMonth(4)"><</button>
+        <button (click)="changeDate(PREVIOUS_YEAR)"><<</button>
+        <button (click)="changeDate(PREVIOUS_MONTH)"><</button>
       </td>
       <td colspan="5" class="year-month">{{currentYear}} {{month.name}}</td>
       <td class="right button">
-        <button (click)="changeYearOrMonth(2)">></button>
-        <button (click)="changeYearOrMonth(1)">>></button>
+        <button (click)="changeDate(NEXT_MONTH)">></button>
+        <button (click)="changeDate(NEXT_YEAR)">>></button>
       </td>
     </tr>
     <tr class="row-dayWeek">
