[ ADD ]  type cell and other small changed

--- a/src/app/components/calendar/calendar.html
+++ b/src/app/components/calendar/calendar.html
@@ -6,7 +6,7 @@
         <button (click)="changeDate(PREVIOUS_YEAR)"><<</button>
         <button (click)="changeDate(PREVIOUS_MONTH)"><</button>
       </td>
-      <td colspan="5" class="year-month">{{currentYear}} {{month.name}}</td>
+      <td colspan="5" class="year-month">{{currentYear}} {{currentMonth.name}}</td>
       <td class="right button">
         <button (click)="changeDate(NEXT_MONTH)">></button>
         <button (click)="changeDate(NEXT_YEAR)">>></button>
